--- a/my-vite-app/package.json
+++ b/my-vite-app/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "react-voicify": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
