--- a/my-vite-app/package.json
+++ b/my-vite-app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
